# theory-of-everything

./: Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: MOND Tests 1.ipynb
